--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <img src="static/images/profile.jpg" alt="Jorge Gallego">
         <h1>My Links</h1>
         <section id="development">
-            <h2>Software Development</h2>
+            <h2>
+                <i class="bi-file-earmark-code"></i>
+                Software Development
+            </h2>
             <ul>
                 <a href="https://bletchleytech.com" target="_blank" rel="noopener noreferrer">
                     <li>
@@ -55,7 +58,10 @@
             </ul>
         </section>
         <section id="arts">
-            <h2>Arts</h2>
+            <h2>
+                <i class="bi-brush"></i>
+                Arts
+            </h2>
             <ul>
                 <a href="https://open.spotify.com/playlist/3LKiM113HfkDTWUWJTsWOA?si=732352c9f0f94dd7" target="_blank" rel="noopener noreferrer">
                     <li>
@@ -72,7 +78,10 @@
             </ul>
         </section>
         <section id="profiles">
-            <h2>Online Profiles</h2>
+            <h2>
+                <i class="bi-globe"></i>
+                Online Profiles
+            </h2>
             <ul>
                 <a href="https://github.com/Jorge644240" target="_blank" rel="noopener noreferrer">
                     <li>
