Added meta description and keywords

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="title" content="My Links - Jorge Gallego">
         <meta name="author" content="Jorge Gallego">
-        <meta name="keywords" content="">
-        <meta name="description" content="">
+        <meta name="keywords" content="Jorge Gallego, Spotify, GitHub, Bletchley, Bletchley Tech, Bletchley Technologcial Solutions Inc., Poetizer, JG, JG Independent Music, LinkedIn, Instagram">
+        <meta name="description" content="This is a small, one-page website intended to be a collection of all of my Internet links, whether they be social-, professional-, or personal-related.">
         <title>My Links - Jorge Gallego</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
