Added lazy loading

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <img src="static/images/profile.jpg" alt="Jorge Gallego">
+        <img src="static/images/profile.jpg" alt="Jorge Gallego" loading="lazy">
         <h1>My Links</h1>
         <section id="development">
             <h2>
