Implemented accessibility guidelines

--- a/index.html
+++ b/index.html
@@ -1,115 +1,93 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="title" content="My Links - Jorge Gallego">
-        <meta name="author" content="Jorge Gallego">
-        <meta name="keywords" content="Jorge Gallego, Spotify, GitHub, Bletchley, Bletchley Tech, Bletchley Technologcial Solutions Inc., Poetizer, JG, JG Independent Music, LinkedIn, Instagram">
-        <meta name="description" content="This is a small, one-page website intended to be a collection of all of my Internet links, whether they be social-, professional-, or personal-related.">
-        <title>My Links - Jorge Gallego</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="static/css/index.css">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    </head>
-    <body>
-        <img src="static/images/profile.jpg" alt="Jorge Gallego" loading="lazy">
-        <h1>My Links</h1>
-        <section id="development">
-            <h2>
-                <i class="bi-file-earmark-code"></i>
-                Software Development
-            </h2>
-            <ul>
-                <a href="https://bletchleytech.com" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-file-earmark-code"></i>
-                            Bletchley Technological Solutions Inc.
-                    </li>
-                </a>
-                <a href="https://thewebdevelopmentblog.net" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-file-earmark-code"></i>
-                            The Web Development Blog
-                    </li>
-                </a>
-                <a href="https://jorgegallego.me" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-file-earmark-code"></i>
-                            Personal Website
-                    </li>
-                </a>
-                <a href="https://nodejs.jorgegallego.me" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-file-earmark-code"></i>
-                            NodeJS Snippets
-                    </li>
-                </a>
-                <a href="https://jgindependentmusic.com" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-file-earmark-code"></i>
-                            JG Independent Music (Website)
-                    </li>
-                </a>
-            </ul>
-        </section>
-        <section id="arts">
-            <h2>
-                <i class="bi-brush"></i>
-                Arts
-            </h2>
-            <ul>
-                <a href="https://open.spotify.com/playlist/3LKiM113HfkDTWUWJTsWOA?si=732352c9f0f94dd7" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-spotify"></i>
-                            JG Independent Music (Playlist)
-                    </li>
-                </a>
-                <a href="https://poetizer.com/author/211943" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-file-earmark-text"></i>
-                            Poetizer
-                    </li>
-                </a>
-            </ul>
-        </section>
-        <section id="profiles">
-            <h2>
-                <i class="bi-globe"></i>
-                Online Profiles
-            </h2>
-            <ul>
-                <a href="https://github.com/Jorge644240" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-github"></i>
-                            GitHub
-                    </li>
-                </a>
-                <a href="https://linkedin.com/in/jorge-gallego" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-linkedin"></i>
-                            LinkedIn
-                    </li>
-                </a>
-                <a href="https://open.spotify.com/artist/7Ln76IztKkytrZJcAPkqq4?si=ZgFLAKCcRBimiSnrZ0MMaA" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-spotify"></i>
-                            JG Independent Music (Artist Profile)
-                    </li>
-                </a>
-                <a href="https://instagram.com/j.d.g.h" target="_blank" rel="noopener noreferrer">
-                    <li>
-                        <i class="bi-instagram"></i>
-                            Instagram
-                    </li>
-                </a>
-            </ul>
-        </section>
-        <p id="copy">&copy; Jorge Gallego <span id="year"></span></p>
-        <script src="static/js/index.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="title" content="My Links - Jorge Gallego" />
+		<meta name="author" content="Jorge Gallego" />
+		<meta name="keywords" content="Jorge Gallego, Spotify, GitHub, Bletchley, Bletchley Tech, Bletchley Technologcial Solutions Inc., Poetizer, JG, JG Independent Music, LinkedIn, Instagram" />
+		<meta name="description" content="This is a small, one-page website intended to be a collection of all of my Internet links, whether they be social-, professional-, or personal-related." />
+		<title>My Links - Jorge Gallego</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" />
+		<link rel="stylesheet" href="static/css/index.css" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	</head>
+	<body>
+		<img src="static/images/profile.jpg" alt="Jorge Gallego" loading="lazy" />
+		<h1>My Links</h1>
+		<section id="development">
+			<h2>
+				<i class="bi-file-earmark-code"></i>
+				Software Development
+			</h2>
+			<ul>
+				<li>
+					<i class="bi-file-earmark-code"></i>
+					<a href="https://bletchleytech.com" target="_blank" rel="noopener noreferrer"> Bletchley Technological Solutions Inc. </a>
+				</li>
+				<li>
+					<i class="bi-file-earmark-code"></i>
+					<a href="https://thewebdevelopmentblog.net" target="_blank" rel="noopener noreferrer"> The Web Development Blog </a>
+				</li>
+				<li>
+					<i class="bi-file-earmark-code"></i>
+					<a href="https://jorgegallego.me" target="_blank" rel="noopener noreferrer"> Personal Website </a>
+				</li>
+				<li>
+					<i class="bi-file-earmark-code"></i>
+					<a href="https://nodejs.jorgegallego.me" target="_blank" rel="noopener noreferrer"> NodeJS Snippets </a>
+				</li>
+				<li>
+					<i class="bi-file-earmark-code"></i>
+					<a href="https://jgindependentmusic.com" target="_blank" rel="noopener noreferrer"> JG Independent Music (Website) </a>
+				</li>
+			</ul>
+		</section>
+		<section id="arts">
+			<h2>
+				<i class="bi-brush"></i>
+				Arts
+			</h2>
+			<ul>
+				<li>
+					<i class="bi-spotify"></i>
+					<a href="https://open.spotify.com/playlist/3LKiM113HfkDTWUWJTsWOA?si=732352c9f0f94dd7" target="_blank" rel="noopener noreferrer"> JG Independent Music (Playlist) </a>
+				</li>
+				<li>
+					<i class="bi-file-earmark-text"></i>
+					<a href="https://poetizer.com/author/211943" target="_blank" rel="noopener noreferrer"> Poetizer </a>
+				</li>
+			</ul>
+		</section>
+		<section id="profiles">
+			<h2>
+				<i class="bi-globe"></i>
+				Online Profiles
+			</h2>
+			<ul>
+				<li>
+					<i class="bi-github"></i>
+					<a href="https://github.com/Jorge644240" target="_blank" rel="noopener noreferrer"> GitHub </a>
+				</li>
+				<li>
+					<i class="bi-linkedin"></i>
+					<a href="https://linkedin.com/in/jorge-gallego" target="_blank" rel="noopener noreferrer"> LinkedIn </a>
+				</li>
+				<li>
+					<i class="bi-spotify"></i>
+					<a href="https://open.spotify.com/artist/7Ln76IztKkytrZJcAPkqq4?si=ZgFLAKCcRBimiSnrZ0MMaA" target="_blank" rel="noopener noreferrer"> JG Independent Music (Artist Profile) </a>
+				</li>
+				<li>
+					<i class="bi-instagram"></i>
+					<a href="https://instagram.com/j.d.g.h" target="_blank" rel="noopener noreferrer"> Instagram </a>
+				</li>
+			</ul>
+		</section>
+		<p id="copy">&copy; Jorge Gallego <span id="year"></span></p>
+		<script src="static/js/index.js"></script>
+	</body>
 </html>
