--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="keywords" content="Jorge Gallego, Spotify, GitHub, Bletchley, Bletchley Tech, Bletchley Technologcial Solutions Inc., Poetizer, JG, JG Independent Music, LinkedIn, Instagram" />
 		<meta name="description" content="This is a small, one-page website intended to be a collection of all of my Internet links, whether they be social-, professional-, or personal-related." />
 		<title>My Links - Jorge Gallego</title>
+        <link rel="canonical" href="https://jorgegallego.link" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
