--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
-		<img src="static/images/profile.jpg" alt="Jorge Gallego" loading="lazy" />
+		<img src="static/images/profile.jpg" alt="Jorge Gallego" />
 		<h1>My Links</h1>
 		<section id="development">
 			<h2>
