--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				</li>
 			</ul>
 		</section>
-		<p id="copy">&copy; Jorge Gallego <span id="year"></span></p>
+		<p id="copy">&copy; Jorge Gallego 2021-<span id="year"></span></p>
 		<script src="static/js/index.js"></script>
 	</body>
 </html>
